--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 aiTools: ["AI 이미지 생성"],
                 date: "2024-08-19",
                 views: 45,
-                // image: 없음 - 아이콘으로 표시
+                image: "https://raw.githubusercontent.com/jaerim92/ai_contest/main/출품2(최한나).png",
                 imageDescription: "북항에서 패들보드를 즐기는 갈매기 캐릭터"
             },
             {
