--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 aiTools: ["AI 이미지 생성"],
                 date: "2024-08-19",
                 views: 45,
-                image: "https://raw.githubusercontent.com/jaerim92/ai_contest/main/seagull-paddleboard.png",
+                image: "https://raw.githubusercontent.com/jaerim92/ai_contest/main/출품1(최한나).png",
                 imageDescription: "북항에서 패들보드를 즐기는 갈매기 캐릭터"
             },
             {
