--- a/index.html
+++ b/index.html
@@ -397,14 +397,14 @@
             {
                 id: 1,
                 title: "북항에서 레포츠를 즐기는 갈매기",
-                author: "최한나1(기획감사실)",
+                author: "최한나(기획감사실)",
                 category: "이미지",
                 preview: "태양 아래 선글라스를 이마에 올린 채 패들보드를 타며 역동적인 에너지를 뿜어냅니다. 부산 북항의 드넓은 바다와 다리, 유람선, 그리고 여름의 활기찬 공기가 함께 어우러져...",
                 content: "태양 아래 선글라스를 이마에 올린 채 패들보드를 타며 역동적인 에너지를 뿜어냅니다. 부산 북항의 드넓은 바다와 다리, 유람선, 그리고 여름의 활기찬 공기가 함께 어우러져 '레포츠의 도시, 동구'를 상징적으로 표현했습니다.\n\n이 작품은 부산 동구의 해양 스포츠 문화와 활기찬 에너지를 갈매기라는 친숙한 캐릭터를 통해 표현한 AI 이미지 생성 작품입니다. 북항의 실제 풍경을 배경으로 하여 지역의 정체성과 현대적인 레포츠 문화가 조화롭게 어우러진 모습을 담았습니다.",
                 aiTools: ["AI 이미지 생성"],
                 date: "2024-08-19",
                 views: 45,
-                image: "https://raw.githubusercontent.com/jaerim92/ai_contest/main/출품1(최한나).png",
+                image: "https://raw.githubusercontent.com/jaerim92/ai_contest/main/test1.png",
                 imageDescription: "북항에서 패들보드를 즐기는 갈매기 캐릭터"
             },
             {
